--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/yellowbackgound"
         app:layout_constraintHeight_percent=".27"
         android:scaleType="centerCrop"
+        android:contentDescription="@string/ajna_programming_and_training_institute"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +32,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/vie_bg">
-<!--    app:layout_constraintVerticle_bias="0"-->
+
 
 
         <androidx.viewpager.widget.ViewPager
@@ -56,17 +57,30 @@
                 app:layout_constraintTop_toTopOf="parent"/>
 
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_google"
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:id="@+id/fab_google"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:backgroundTint="#ffffff"-->
+<!--            android:src="@drawable/googlelogo"-->
+<!--            android:elevation="35dp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/view_pager"/>-->
+
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#ffffff"
-            android:src="@drawable/googlelogo"
-            android:elevation="35dp"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="9dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_pager"/>
+            app:layout_constraintEnd_toStartOf="@+id/fab_linkedin"
+            app:layout_constraintStart_toEndOf="@+id/fab_facebook"
+            app:layout_constraintTop_toBottomOf="@+id/view_pager" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_facebook"
@@ -76,9 +90,10 @@
             android:elevation="35dp"
             android:src="@drawable/facebook"
             app:layout_constraintHorizontal_bias="1"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/fab_google"
+            app:layout_constraintEnd_toStartOf="@id/sign_in_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_pager" />
 
@@ -93,7 +108,7 @@
             android:layout_marginLeft="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/fab_google"
+            app:layout_constraintStart_toEndOf="@id/sign_in_button"
             app:layout_constraintTop_toBottomOf="@id/view_pager" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -103,6 +118,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@mipmap/ic_launcher_round"
+        android:contentDescription="@string/logo"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -113,7 +129,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Let's get connected"
+        android:text="@string/let_s_get_connected"
         android:textStyle="bold"
         android:textSize="30sp"
         android:textColor="#ffffff"
